5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1680_1951.log
== TEST (2019-05-01 18:46:56) 
-- CODE:
x0 = float(input("digite x0:"))
y0 = float(input("digite y0:"))
x1 = float(input("digite x1:"))
y1 = float(input("digite y1:"))
x2 = float(input("digite y2:"))

c = (x1 - x0) * (y2 - y0) * (x2 - x0) * (y1 - y0)

print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    c = (x1 - x0) * (y2 - y0) * (x2 - x0) * (y1 - y0)
NameError: name 'y2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:48:15) 
-- CODE:
x0 = float(input("digite x0:"))
y0 = float(input("digite y0:"))
x1 = float(input("digite x1:"))
y1 = float(input("digite y1:"))
x2 = float(input("digite x2:"))
y2 = float(input("digite y2:"))
c = (x1 - x0) * (y2 - y0) * (x2 - x0) * (y1 - y0)

print(c)

-- OUTPUT:
80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:49:36) 
-- CODE:
x0 = float(input("digite x0:"))
y0 = float(input("digite y0:"))
x1 = float(input("digite x1:"))
y1 = float(input("digite y1:"))
x2 = float(input("digite x2:"))
y2 = float(input("digite y2:"))
c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)

print(c)

-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:53:54) 
-- CODE:
x0 = float(input("digite x0:"))
y0 = float(input("digite y0:"))
x1 = float(input("digite x1:"))
y1 = float(input("digite y1:"))
x2 = float(input("digite x2:"))
y2 = float(input("digite y2:"))

c = (x1 - x0) * (y2 - y0) - (x2 - x0) * (y1 - y0)
if( c < 0):
	print("A direita da reta")
elif(c > 0):
	print("A esquerda da reta")
elif(c == 0):
	print("Sobre a reta")


-- EXECUTION TIME:
0.137843
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
